--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
   border-radius: 12px;
   width: 90%;
   max-width: 900px;
-  margin: auto;
-  margin-top: 40px;
+  margin: 40px auto;
 }
 
 h2 {
@@ -56,13 +55,12 @@ button:hover {
 
 small {
   display: block;
-  margin-top: 5px;
   text-align: center;
+  margin-top: 5px;
 }
 
 pre {
   background: #000;
   padding: 10px;
   border-radius: 6px;
-  overflow-x: auto;
 }
